--- a/css/index.css
+++ b/css/index.css
@@ -200,7 +200,7 @@ img {
   }
 }
 .main-navigation .nav-container .nav {
-  width: 350px;
+  width: 370px;
   display: flex;
   justify-content: space-evenly;
 }
@@ -211,9 +211,29 @@ img {
   }
 }
 .main-navigation .nav-container .nav a {
+  position: relative;
   font-size: 1.6rem;
   color: #212529;
   text-decoration: none;
+  padding: 15px 20px;
+  transition: 1s;
+  z-index: 100;
+}
+.main-navigation .nav-container .nav a .nav-link-hover-show {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 1;
+  transition: opacity 1000ms;
+  width: 100%;
+  height: 100%;
+  background-color: #ccc;
+  z-index: -5;
+}
+.main-navigation .nav-container .nav a .nav-link-hover-hide {
+  opacity: 0;
+  transition: opacity 1000ms;
 }
 .footer {
   width: 100%;
