Added form style and template

--- a/less/index.less
+++ b/less/index.less
@@ -8,6 +8,8 @@
 
 // Reusable components
 @import 'navigation.less';
+@import 'inputs.less';
+@import 'animations.less';
 @import 'footer.less';
 
 // Page Specific
