--- a/css/index.css
+++ b/css/index.css
@@ -174,6 +174,12 @@ img {
     margin: 0 5%;
   }
 }
+.display-none {
+  display: none;
+}
+.overflow-hidden {
+  overflow: hidden;
+}
 .main-navigation {
   width: 100%;
   height: 90px;
@@ -234,6 +240,71 @@ img {
 .main-navigation .nav-container .nav a .nav-link-hover-hide {
   opacity: 0;
   transition: opacity 1000ms;
+}
+form {
+  margin: 2rem 0;
+}
+.field {
+  display: flex;
+  flex-flow: column-reverse;
+  margin-bottom: 1rem;
+}
+label,
+input {
+  transition: all 0.2s;
+  touch-action: manipulation;
+}
+input,
+textarea {
+  font-size: 1.5rem;
+  border: 0;
+  border-bottom: 1px solid #ccc;
+  font-family: inherit;
+  appearance: none;
+  border-radius: 0;
+  padding: 5px;
+  cursor: text;
+  /** Overide the placeholder by the label  **/
+}
+input:focus,
+textarea:focus {
+  outline: 0;
+  border-bottom: 1px solid #0f44e0;
+}
+input:placeholder-shown + label,
+textarea:placeholder-shown + label {
+  cursor: text;
+  max-width: 66.66%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transform-origin: left bottom;
+  transform: translate(0, 2.125rem) scale(1.5);
+  font-size: 0.8rem;
+  padding: 0 5px;
+}
+input:focus::-webkit-input-placeholder,
+textarea:focus::-webkit-input-placeholder {
+  opacity: 1;
+}
+input:not(:placeholder-shown) + label,
+textarea:not(:placeholder-shown) + label,
+input:focus + label,
+textarea:focus + label {
+  transform: translate(0, 0) scale(1);
+  cursor: pointer;
+  color: #0f44e0;
+}
+textarea {
+  height: 150px;
+  border: 1px solid #ccc;
+}
+label {
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
+}
+::-webkit-input-placeholder {
+  opacity: 0;
+  transition: inherit;
 }
 .footer {
   width: 100%;
@@ -369,4 +440,84 @@ img {
 .home .content-pick .destination .btn:hover {
   background: #FFFFFF;
   color: #17A2B8;
+}
+.vacation-form {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: transparent;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation: bounce-in 2s;
+  -webkit-animation: bounce-in 2s;
+  -moz-animation: bounce-in 2s;
+}
+@-moz-keyframes bounce-in {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes bounce-in {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes bounce-in {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.vacation-form h4 {
+  color: #000000;
+}
+.vacation-form form {
+  width: 40%;
+  background-color: #ffffff;
+  padding: 25px;
+  z-index: 5;
+}
+@media (max-width: 500px) {
+  .vacation-form form {
+    width: 98%;
+    height: 80%;
+  }
+}
+.vacation-form .filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #212529;
+  opacity: 0.9;
+  z-index: 2;
 }
