--- a/less/mixins.less
+++ b/less/mixins.less
@@ -30,3 +30,23 @@
     color: @button-bg;
   }
 }
+
+// Animations
+.keyframes(@name, @arguments) {
+  @-moz-keyframes @name { @arguments(); }
+  @-webkit-keyframes @name { @arguments(); }
+  @keyframes @name { @arguments(); }
+}
+
+.animations(@arguments) {
+  animation: @arguments;
+  -webkit-animation: @arguments;
+  -moz-animation: @arguments;
+}
+
+.flex-layout(@direction, @justify, @align) {
+  display: flex;
+  flex-direction: @direction;
+  justify-content: @justify;
+  align-items: @align;
+}
