--- a/css/index.css
+++ b/css/index.css
@@ -306,6 +306,46 @@ label {
   opacity: 0;
   transition: inherit;
 }
+.btn-primary {
+  background-color: #17A2B8;
+  color: #FFEBCD;
+  padding: 10px 20px;
+  text-align: center;
+  border-radius: 8px;
+  cursor: pointer;
+  width: 120px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  transition: 0.3s;
+  width: 100%;
+}
+.btn-primary:hover {
+  background-color: #117a8b;
+}
+.btn-close {
+  background-color: #212529;
+  color: #cccccc;
+  padding: 10px 20px;
+  text-align: center;
+  border-radius: 8px;
+  cursor: pointer;
+  width: 120px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  transition: 0.3s;
+  width: 40px;
+  height: 40px;
+  font-size: 36px;
+  opacity: 1;
+  position: absolute;
+  top: 18px;
+  padding: 1px;
+  right: 30px;
+  border: none;
+}
+.btn-close:hover {
+  background-color: #0a0c0d;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed #C0C0C0;
