--- a/less/index.less
+++ b/less/index.less
@@ -10,6 +10,7 @@
 @import 'navigation.less';
 @import 'inputs.less';
 @import 'animations.less';
+@import 'buttons.less';
 @import 'footer.less';
 
 // Page Specific
