--- a/less/mixins.less
+++ b/less/mixins.less
@@ -31,6 +31,23 @@
   }
 }
 
+.button(@bg-color, @color) {
+  background-color: @bg-color;
+  color: @color;
+  padding: 10px 20px;
+  text-align: center;
+  border-radius: 8px;
+  cursor: pointer;
+  width: 120px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  transition: .3s;
+
+  &:hover {
+      background-color: darken(@bg-color, 10%);
+  }
+}
+
 // Animations
 .keyframes(@name, @arguments) {
   @-moz-keyframes @name { @arguments(); }
